--- a/Chatbot_Gemini.ipynb
+++ b/Chatbot_Gemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuVx3hLSTmmiQlZ4Cm7ZVN",
+      "authorship_tag": "ABX9TyMs39QuTGQM4+GpLGpy4M3Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,49 +23,43 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dineshuthayakumar/MitraAIBootCamp/blob/main/Chatbot_Gemini.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dineshuthayakumar/AIExperiments/blob/main/Chatbot_Gemini.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YdO4dbBjXCcA",
-        "outputId": "81dd29ef-7d52-4548-d6a6-01d4f7de8538"
+        "outputId": "7438c10d-c295-4719-8f77-f40f428d0af5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Unfortunately, the Kissflow community documentation doesn't explicitly state whether you can add custom fields directly to *sub-items* within Kissflow Boards. However, based on general knowledge and the capabilities of similar platforms, it's **likely possible, but with some caveats and limitations.**\n",
+            "While the Kissflow documentation doesn't explicitly state a hard limit on the number of sub-items, **it's generally not recommended to add 200 sub-items to a single item.**\n",
             "\n",
-            "Here's a breakdown of why and what you should consider:\n",
+            "Here's why, and what you should consider instead:\n",
             "\n",
-            "**Why it's likely possible:**\n",
+            "*   **Performance and Usability:** Having that many sub-items can significantly degrade performance, especially when loading, updating, and navigating within the parent item. It becomes difficult to manage and track that much detail within a single view. Kissflow is likely optimized for a more manageable number of sub-items. Think of it from a user experience perspective: scrolling through 200 sub-items to find a specific one would be extremely cumbersome.\n",
             "\n",
-            "* **General Customization:** Kissflow is known for its customization capabilities. It allows you to define custom fields for the main items (cards) within a board.  Extending this functionality to sub-items would align with this general philosophy.\n",
-            "* **Hierarchical Data Structures:** Often, platforms that support sub-items also allow for specific data attributes to be assigned to them.  This allows for more granular tracking and management of the sub-item tasks.\n",
-            "* **Purpose of Sub-items:** Sub-items are usually used to break down larger tasks into smaller, more manageable components.  Each of these components might require its own set of specific data points.\n",
+            "*   **Organization and Clarity:** 200 sub-items likely indicate that the parent item is too broad and needs to be broken down into smaller, more manageable tasks or projects. You're likely trying to pack too much functionality into a single Board item.\n",
             "\n",
-            "**Caveats and Limitations:**\n",
+            "*   **Alternative Solutions:** Kissflow likely offers better methods for managing complex projects with many individual tasks. Consider these options:\n",
             "\n",
-            "* **Plan Dependency:** The availability of custom fields on sub-items might depend on your Kissflow plan.  Higher-tier plans often unlock more advanced customization features.\n",
-            "* **Direct vs. Indirect Approach:** There might not be a straightforward \"add custom field to sub-item\" button.  Instead, you might need to use a workaround or a specific feature designed for this purpose. This might involve:\n",
-            "    * **Lookup Fields/Relationships:** Creating a separate form or list specifically for sub-items and then linking it to the main item using a lookup field.  This allows you to attach a sub-item \"record\" with its own custom fields to each main item.\n",
-            "    * **Conditional Logic:**  Using conditional logic within the main item form to display or hide sub-item specific fields based on certain criteria.  This isn't ideal, but could work if the sub-item data is directly related to the parent item.\n",
-            "* **Reporting Limitations:** How easily you can report on these sub-item custom fields might be limited.  Kissflow's reporting capabilities might not fully extend to deeply nested data.\n",
+            "    *   **Breaking Down the Parent Item:** Instead of having one item with 200 sub-items, create multiple parent items, each with a smaller, more manageable number of sub-items (e.g., 10-20). This makes it easier to track progress, assign responsibilities, and keep the board organized.\n",
+            "    *   **Using Multiple Boards:** If the tasks are distinct enough, consider using multiple Kissflow Boards to categorize and organize the different aspects of the project.\n",
+            "    *   **Automated Workflows:** If the creation or management of sub-items can be automated, explore using Kissflow's workflow automation capabilities to handle some of the repetitive tasks. This can reduce the need to manually create and manage a large number of sub-items.\n",
+            "    *   **Integrations:** Explore integrations with other project management tools that might be better suited for handling such a large number of tasks. Kissflow can often integrate with these tools, allowing you to manage different aspects of the project in different platforms.\n",
+            "    *  **Using Categories/Tags:** Perhaps you can use a category or tag system to further define the board item instead of using subitems.\n",
             "\n",
-            "**How to Confirm (Recommended Steps):**\n",
+            "**Recommendation:**\n",
             "\n",
-            "1. **Directly Check Kissflow Boards:**  The best way to confirm is to log into your Kissflow account and navigate to the Boards section.  Try creating a board and adding a sub-item.  Look for options to customize the sub-item fields.  Check for buttons that says \"Add Field\" or similar.\n",
-            "2. **Contact Kissflow Support:** This is the most reliable approach.  Reach out to Kissflow support (likely through their in-app help or website) and ask specifically if you can add custom fields to sub-items within Boards and how to do so.  They can also clarify any plan-specific limitations.\n",
-            "3. **Explore Kissflow Forums:**  While the documentation is silent on this, it's possible other users have discussed this topic in the Kissflow community forums.  Search the forums using keywords like \"custom fields sub-items boards.\"\n",
-            "\n",
-            "**In summary, while it's highly *likely* that you can add some form of custom data to sub-items in Kissflow Boards, confirm the exact method and limitations with Kissflow support to ensure it meets your specific needs.**\n",
+            "Contact Kissflow support directly to confirm if there's a hard limit on sub-items per item. However, regardless of a hard limit, **reconsider your approach.**  Break down the tasks into smaller, more manageable pieces. Focus on creating a clear and organized workflow using Kissflow's built-in features and consider integrations if necessary. Think about *why* you need 200 sub-items. Is it truly necessary, or is there a better way to structure the project within Kissflow's capabilities?\n",
             "\n"
           ]
         }
@@ -97,14 +91,8 @@
         "# Example usage\n",
         "if __name__ == \"__main__\":\n",
         "  contents = [\n",
-        "      'Can I add new fields to the sub items in Kissflow Boards?',\n",
-        "      'https://community.kissflow.com/category/documentation-section',\n",
-        "      'https://community.kissflow.com/category/boards',\n",
-        "      'https://community.kissflow.com/category/using-boards',\n",
-        "      'https://community.kissflow.com/category/managing-boards',\n",
-        "      'https://community.kissflow.com/category/board-views',\n",
-        "      'https://community.kissflow.com/category/board-metrics',\n",
-        "      'https://community.kissflow.com/category/custom-reports-in-boards'\n",
+        "      'Can I add 200 sub items within a Kissflow Board item?',\n",
+        "      'https://community.kissflow.com/t/q6h9qlf/creating-and-managing-subitems'\n",
         "  ]\n",
         "  generated_text = generate_response_from_url(contents)\n",
         "  print(generated_text)"
