Updated the title

--- a/Chatbot_openai.ipynb
+++ b/Chatbot_openai.ipynb
@@ -55,7 +55,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Step 1: Scraping our web content and using that as the foundation.\n"
+        "## Scraping Kissflow Documentation from the web and using that as the foundation.\n"
       ],
       "metadata": {
         "id": "UuysOTGodhlm"
